# Dashcam_Investigator

./: .gitignore  AGENTS.md  LICENSE  README.md  log.conf  pyproject.toml
.github/workflows/: ci.yml  semgrep.yml
dashcam_investigator/: QtMainWindow.py  __main__.py  app.py  extract_metadata.py  metadata_classes.py
dashcam_investigator/core/: extract_metadata.py  generate_dataframe.py  generate_map.py  generate_report.py  get_file_count.py  map_classes.py  map_functions.py  output_generator.py  process_files.py  walk_directory.py
dashcam_investigator/gui/: QtMainWindow.py  QtNewProjectDialog.py  app.py  new_project_class.py  qt_models.py  table_models.py  worker_class.py
dashcam_investigator/project_manager/: create_new_project.py  project_datatypes.py  project_manager.py
dashcam_investigator/utils/: common.py  convert_milli.py  custom_json_functions.py  generate_file_hash.py  json_encoder.py
fluent_gui/: QtFluentMainWindow.py  app.py  qt_models.py
qt_designer/: DashInv_MainWindow.ui
tests/: __init__.py  conftest.py  test_common.py  test_custom_json_functions.py  test_extract_metadata.py  test_generate_dataframe.py  test_generate_report.py  test_process_files.py  test_project_datatypes.py  test_project_manager.py
