[tool.poetry]
name = "Dashcam_Investigator"
version = "0.1.0"
description = "A python desktop application to aid in the forensic investigation of evidence gathered from dashcam devices."
authors = ["Mihier-Roy <31336766+Mihier-Roy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.3"
numpy = "^1.22.4"
PySide2 = "^5.15.2"
filetype = "^1.0.13"
folium = "^0.14.0"
gpxpy = "^1.5.0"
altair = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^22.3.0"
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
