[tool.poetry]
name = "Dashcam_Investigator"
version = "0.1.0"
description = "A python desktop application to aid in the forensic investigation of evidence gathered from dashcam devices."
authors = ["Mihier-Roy <31336766+Mihier-Roy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.0"
numpy = "^1.26.0"
PySide6 = "^6.7.0"
filetype = "^1.2.0"
folium = "^0.15.0"
gpxpy = "^1.6.0"
altair = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
